<resources>
    <string name="app_name">MobiAuth</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_camera">Authentication requires a camera</string>
    <string name="login_support_text">Can\'t log in? Press here to visit the support page</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_item_authenticate">Authenticate</string>
    <string name="navigation_drawer_item_organizations">Organizations</string>
    <string name="navigation_drawer_item_applications">Applications</string>
    <string name="navigation_drawer_item_settings">Settings</string>
    <string name="navigation_drawer_item_help">Get help</string>
    <string name="navigation_drawer_category_support">Support</string>

    <string name="action_logout">Log out</string>
    <string name="server_api_path" translatable="false">https://mobiauth.no/api/</string>
    <string name="server_help_url">https://mobiauth.no/support</string>
    <string name="shared_preferences">SHARED_PREFERENCES_MOBIAUTH</string>
    <string name="prefs_username">PREFS.USERNAME</string>
    <string name="prefs_password">PREFS.PASSWORD</string>
    <string name="prefs_first_name">PREFS.FIRST_NAME</string>
    <string name="prefs_last_name">PREFS.LAST_NAME</string>
    <string name="prefs_email">PREFS.EMAIL</string>

    <string name="labels_organization_name">Organization id:</string>
    <string name="labels_testdata">Biometric authentication:</string>
    <string name="labels_authenticate_description">Authenticate here:</string>
    <string name="labels_authenticate_scancode">1. Scan the QR code provided</string>
    <string name="labels_authenticate_takephoto">2. Take a photo of your face</string>
    <string name="labels_authenticate_verify">3. Verify authentication</string>
    <string name="labels_home_welcome">Welcome to MobiAuth</string>
    <string name="labels_home_description">Use the menu to authenticate, view your permissions or visit the support page.</string>

    <string name="btn_authfragment_scan">Scan</string>
    <string name="btn_authfragment_takephoto">Take photo</string>
    <string name="btn_authfragment_verify">Verify</string>
</resources>
