<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_authenticate"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_drawer_item_authenticate" />
        <item
            android:id="@+id/nav_organizations"
            android:icon="@drawable/ic_menu_organization"
            android:title="@string/navigation_drawer_item_organizations" />
        <item
            android:id="@+id/nav_applications"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_drawer_item_applications" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/navigation_drawer_category_support">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/navigation_drawer_item_help" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
